--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -67,9 +67,18 @@
 
 .Search .unit {
   color: rgb(33, 33, 33);
-  font-size: 30px;
+  font-size: 22px;
   font-weight: 400;
   position: relative;
   line-height: 1;
-  top: -10px;
+  top: -20px;
+  left: 10px;
+}
+
+.Search a {
+  text-decoration: none;
+}
+
+.Search a:visited {
+  color: blue;
 }
