--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
 .App {
   font-family: "Merriweather Sans", sans-serif;
   text-align: center;
+  color: #fff8ea;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #302525;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #fff8ea;
 }
 
 body {
-  background-color: #132743;
+  background-color: #302525;
 }
 
 .main-body {
@@ -23,14 +24,10 @@ body {
 }
 
 .main-container {
-  margin: 10% auto;
-  border: 2px solid #132743;
+  margin: 1% auto;
+  border: 2px solid #594545;
   border-radius: 30px;
-  background: linear-gradient(
-    69.8deg,
-    rgb(25, 49, 108) 2.8%,
-    rgb(1, 179, 201) 97.8%
-  );
-  max-width: 500px;
+  background: linear-gradient(69.8deg, #594545 2.8%, #815b5b 97.8%);
+  max-width: 45%;
   max-height: auto;
 }
