--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,33 +1,39 @@
 .full-weather-report {
-  font-family: "Merriweather Sans", sans-serif;
+  font-family: "Noto Serif Telugu", serif;
   padding: 12px;
-  color: #222324;
-  max-width: 400px;
+  color: #594545;
+  max-width: 780px;
   max-height: auto;
   margin: auto;
 }
 
 .card {
-  max-width: 120px;
-  min-width: 120px;
-  color: black;
+  max-width: 113px;
+  min-width: 113px;
+  color: #815b5b;
   opacity: 0.9;
-  padding-left: 2px;
-  padding-right: 2px;
-  margin: 10px;
+  padding-left: 1px;
+  padding-right: 1px;
+  margin: 5px;
 }
 
 .card-title {
-  font-size: 13px;
+  font-size: 14px;
   font-weight: bolder;
 }
 
 .card-subtitle {
-  font-size: 10px;
+  font-size: 11px;
   font-weight: bolder;
+  color: #9e7676;
 }
 
 .WeatherForecast-temperature-min {
   opacity: 0.6;
   margin-left: 5px;
+  color: #9e7676;
+}
+
+.info-text-expand {
+  font-size: 16px;
 }
