--- a/src/WeatherInfo.css
+++ b/src/WeatherInfo.css
@@ -1,11 +1,13 @@
 .container {
+  font-family: "Noto Serif Telugu", serif;
   max-width: 400px;
   max-height: auto;
-  color: white;
+  color: #fff8ea;
 }
 
 .current-city-name {
-  font-size: 18px;
+  font-size: 20px;
+  letter-spacing: 1px;
   text-align: center;
   font-weight: bold;
   text-transform: uppercase;
@@ -13,57 +15,53 @@
   padding-bottom: 5px;
 }
 
-.current-time-date {
-  font-size: 11px;
-  margin-top: 15px;
-}
-
 .btn-edit:hover {
-  background-color: #323643;
+  background-color: #815b5b;
 }
 
 .current-weather-report {
-  font-family: "Merriweather Sans", sans-serif;
   padding: 15px;
-  color: #222324;
+  color: #fff8ea;
 }
 
 .condition-text {
   text-align: center;
   font-size: 14px;
   text-transform: uppercase;
+  color: #f3c5c5;
 }
 
 .info-text {
   font-size: 12px;
+  color: #9e7676;
+}
+
+.feelslike-text {
+  font-size: 15px;
+  color: #f7e2d6;
 }
 
 .button-text {
   font-size: 12px;
 }
 
-.Search .temperature {
+.temperature {
   font-weight: bold;
-  color: white;
-  font-size: 70px;
+  font-size: 75px;
   font-weight: 400;
   margin-top: -20px;
+  color: #ffeddb;
 }
 
-.Search .unit {
-  color: white;
-  font-size: 20px;
-  font-weight: 400;
-  position: relative;
-  line-height: 1;
-  top: -26px;
-  left: 10px;
+.current-date {
+  font-size: 15px;
+  margin-top: 20px;
 }
 
-.Search a {
-  text-decoration: none;
+.current-time {
+  font-size: 11px;
 }
 
-.Search a:visited {
-  color: blue;
+.unit {
+  font-size: 40px;
 }
