--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -2,7 +2,7 @@
   font-family: "Noto Serif Telugu", serif;
   padding: 12px;
   color: #594545;
-  max-width: 680px;
+  max-width: 90%;
   max-height: auto;
   margin: auto;
 }
