Revert "Revert "Update WeatherForecast.css""
This reverts commit 353aea0551e9cf9ee1648d9cec8b745300d0b1d0.

--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -2,6 +2,8 @@
   font-family: "Noto Serif Telugu", serif;
   padding: 12px;
   color: #594545;
+  max-width: 90%;
+  max-height: auto;
   margin: auto;
 }
 
