--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
-  font-family: "Merriweather Sans", sans-serif;
+  font-family: "Noto Serif Telugu", serif;
   text-align: center;
   color: #fff8ea;
-}
+} 
 
 .App-header {
   background-color: #302525;
